Sync prosilver-ACP's feature to prosilver template (vanilla & website)... Always show a scrollbar for short pages - stops the jump when the scrollbar appears, non-ie browsers.
git-svn-id: file:///svn/phpbb/trunk@7297 89ea8834-ac86-4346-8a33-228a782c2dd0

--- a/phpBB/styles/prosilver/theme/common.css
+++ b/phpBB/styles/prosilver/theme/common.css
@@ -9,6 +9,9 @@
 
 html {
 	font-size: 100%;
+	/* Always show a scrollbar for short pages - stops the jump when the scrollbar appears. non-ie browsers */
+	height: 100%;
+	margin-bottom: 1px;
 }
 
 body {
